k8s/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-helpin
  namespace: default
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: pp-nginx
  tls:
  - hosts:
    - api.stage.helpin.ai
    secretName: cert-stage-helpin-wildcard
  rules:
  - host: api.stage.helpin.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helpin-server-svc
            port:
              number: 8080
